--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,7 @@ button:active{
 .contact-banner{
     padding: 100px 200px;
     display: flex;
+    align-items: center;
     gap: 200px;
     justify-content: center;
 }
